# onecrawler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE.md  example_usage.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  temp.py  test.Dockerfile  test.sh
.github/workflows/: cd-docker.yml  cd-docs.yml  cd-pypi.yml  ci.yml  deploy-docs.yml  docker-publish.yml  publish-to-pypi.yml
docs/: api-reference.md  configuration.md  contributing.md  development.md  index.md  installation.md  link-extraction.md  pages-deploy.md  quick-start.md  scraping.md  sitemap-discovery.md  troubleshooting.md
docs/includes/: mkdocs.md
docs/stylesheets/: extra.css
onecrawler/: __init__.py  __main__.py  browser.py  version.py
onecrawler/config/: __init__.py  brawser.py  crawler.py  genai.py  proxy.py  settings.py
onecrawler/crawler/: __init__.py  base.py  crawl.py  engine.py  general.py  navigation.py  pipeline.py  pool.py  range.py  schedule.py  scheduler.py  spider.py
onecrawler/crawler/content/: engine.py  scraper.py
onecrawler/crawler/content/heuristic/: script.py
onecrawler/crawler/link/: classifier.py  deep.py  engine.py  helper.py  shallow.py
onecrawler/crawler/map/: helper.py  sitemap.py
onecrawler/crawler/scraper/: base.py  core.py  engine.py  scraper.py
onecrawler/crawler/scraper/genai/: executor.py  extractor.py  graph.py  model.py  prompt.py  state.py
onecrawler/crawler/scraper/genai/llms/: __init__.py  base.py  gemini.py  ollama.py  openai.py
onecrawler/crawler/scraper/heuristic/: script.py
onecrawler/crawler/scraper/markdown/: script.py
onecrawler/filters/: __init__.py  base.py  chain.py  date.py  files.py  keywords.py  similarity.py
onecrawler/map/: helper.py  sitemap.py
onecrawler/proxy/: pool.py
onecrawler/settings/: __init__.py  browser.py  crawler.py  genai.py  proxy.py  simulation.py  sitemap.py
onecrawler/utils/: __init__.py  decorator.py  progress.py  stats.py  writter.py
scripts/: bench_extraction_strategy.py  bench_page_reuse.py  run_crawler.py  run_link_extractor.py  run_scraper.py  run_sitemap.py
tests/: _support.py  test_config.py  test_deep_crawler.py  test_filters.py  test_heuristic_strategy.py  test_link_helpers.py  test_llm_manager.py  test_map_helper.py  test_pipeline_engine.py  test_scraper_engine.py  test_settings.py  test_sitemap.py  test_utils_and_base.py  test_version.py
