[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onecrawler"
version = "0.1.2"
description = "OneCrawler is an async Python crawling library for discovering URLs, extracting links, and scraping structured content."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sayed Shaun", email = "sayedshaun4@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "curl_cffi",
    "tqdm",
    "pydantic",
    "playwright",
    "trafilatura",
    "lxml",
]

[project.optional-dependencies]
genai = [
    "langchain",
    "langgraph",
]
dev = [
    "black",
    "isort",
    "pre-commit",
    "mkdocs-material",
    "mkdocs-minify-plugin",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[project.urls]
Homepage = "https://github.com/sayedshaun/onecrawler"
Documentation = "https://sayedshaun.github.io/onecrawler/"
