[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "onecrawler"
version = "0.1.5"
description = "An async python crawling framework for discovering URLs, extracting links, and scraping structured content."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Sayed Shaun", email = "sayedshaun4@gmail.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "curl_cffi>=0.15.0",
    "tqdm>=4.67.3",
    "pydantic>=2.13.3",
    "playwright>=1.58.0",
    "trafilatura>=2.0.0",
    "lxml>=5.4.0",
    "toml>=0.10.2",
    "httpx>=0.28.1"
]

[project.optional-dependencies]
genai = [
    "langgraph>=1.1.10",
]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pre-commit>=4.6.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-minify-plugin>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[project.urls]
Homepage = "https://github.com/sayedshaun/onecrawler"
Documentation = "https://sayedshaun.github.io/onecrawler/"
